--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,6 +4,10 @@ body {
   font-family: 'Poppins', sans-serif !important;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+  margin-bottom: 0 !important;
+}
+
 .input_video, .output_canvas {
  top: 0;
  left: 0;
@@ -14,8 +18,8 @@ body {
 }
 
 .pointer {
-  width: 35px;
-  height: 35px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
   color: rgba(255, 255, 255, 0);
   border: 1px solid rgb(255, 255, 255);
@@ -29,6 +33,8 @@ body {
   justify-content: center;
   align-items: center;
   opacity: 0;
+  user-select: none;
+  pointer-events: none;
 }
 
 .pointer::before {
@@ -47,6 +53,25 @@ body {
 .output_canvas {
   z-index: -1;
   filter: brightness(15%);
+}
+
+
+/** NOTIF */
+.notif {
+  position: fixed;
+  padding: 1rem 2rem;
+  background-color: rgb(31, 120, 209);
+  top: 25px;
+  right: 25px;
+  color: white;
+  display: none;
+  max-width: 350px;
+  transition: all 350ms;
+}
+
+.notif-message {
+  margin-top: 5px;
+  line-height: 1.2rem;
 }
 
 /*Ripple on click*/
@@ -101,6 +126,14 @@ nav a:hover {
 /* CARD IMG */
 .card {
   height: 100%;
+  border-radius: 0 !important;
+  transition: all 450ms;
+  border: 0px !important
+}
+
+.border-hover {
+  border: 2px solid #6FDBFB !important;
+  transform: scale(1.03);
 }
 
 .card img {
@@ -114,6 +147,7 @@ nav a:hover {
 .card-small {
   position: relative;
   height: 100%;
+  transition: all 250ms;
 }
 /* 
 .card .card-small img {
@@ -181,10 +215,14 @@ nav a:hover {
   height: 100vh;
   background: rgb(0, 0, 0);
   display: flex;
+  flex-direction: column;
+  text-align: center;
+  color: white;
   justify-content: center;
   align-items: center;
   filter: contrast(20);
   z-index: 999;
+  transition: all 450ms;
 }
 
 .loader .dot {
