--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -53,7 +53,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 .output_canvas {
   z-index: -1;
-  filter: brightness(25%);
+  filter: brightness(20%);
 }
 
 
@@ -339,4 +339,23 @@ nav a:hover {
 	60% {
 		transform: translateY(0);
 	}
+}
+
+/* CARD ANNOUNCEMENT */
+.card-announcement {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: rgba(22, 22, 22, 0.856);
+  border: 1.5px solid rgba(255, 255, 255, 0.363);
+  background-clip: border-box;
+  padding: 1.5rem 1.5rem;
+  border-radius: 5px;
+}
+
+/* UTILITY */
+.text-sub {
+  color: rgb(211, 211, 211) !important;
 }
