--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,6 +3,7 @@
 body {
   font-family: 'Poppins', sans-serif !important;
   user-select: none;
+  background-color: black !important;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -94,8 +95,9 @@ h1, h2, h3, h4, h5, h6, p {
 
 /* NAVIGATION */
 nav {
-  padding: 7rem 0rem 2rem 7rem;
+  padding: 9rem 0rem 3rem 0rem;
   position: relative;
+  text-align: center;
 }
 
 nav a {
