--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,7 +3,7 @@
 body {
   font-family: 'Poppins', sans-serif !important;
   user-select: none;
-  background-color: black !important;
+  /* background-color: black !important; */
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -17,6 +17,7 @@ h1, h2, h3, h4, h5, h6, p {
  width: 100%;
  height: 100vh;
  z-index: -1;
+ /* transform: scaleX(-1) */
 }
 
 .pointer {
@@ -49,7 +50,11 @@ h1, h2, h3, h4, h5, h6, p {
 
 .input_video {
   opacity: 0;
-
+  display: none;
+  /* filter: brightness(20%); */
+  /* min-width: 100%; */
+  /* min-height: 100%; */
+  /* object-fit: fill; */
 }
 
 .output_canvas {
@@ -272,6 +277,46 @@ nav a:hover {
   50% {
     transform: translateX(-35px)
   }
+}
+
+/* BLOCKQUOTE */
+blockquote {
+  margin: 0;
+  display: block;
+  border-radius: 8px;
+  position: relative;
+  color: rgba(255, 255, 255, 0.774);
+  padding: 30px 50px 65px 50px;
+  font-size: 1.1rem;
+  font-weight: 500;
+  margin: 0 0 -50px;
+  line-height: 1.4em;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.055);
+  text-align: center;
+  margin-top: 1rem;
+  margin-bottom: .5rem;
+  width: 100%;
+}
+
+blockquote:before,
+blockquote:after {
+  font-family: 'FontAwesome';
+  content: "\201C";
+  position: absolute;
+  font-size: 60px;
+  opacity: 1;
+  font-style: normal;
+}
+
+blockquote:before {
+  top: 4rem;
+  left: 15rem;
+}
+
+blockquote:after {
+  content: "\201D";
+  right: 12rem;
+  bottom: 35px;
 }
 
 /** SCROLLBAR */
