--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -40,12 +40,17 @@ h1, h2, h3, h4, h5, h6, p {
   pointer-events: none;
 }
 
-.pointer::before {
+/* .pointer::before {
   content: "";
   background-color: white;
   border-radius: 50%;
   height: 5px;
   width: 5px;
+} */
+
+.timer {
+  color: white;
+  font-size: 1.3rem;
 }
 
 .input_video {
