distance calc from sqrt to Math.hypot()

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -118,7 +118,7 @@ nav a {
   letter-spacing: 1px;
 }
 
-nav a:visited {
+nav a:visited, nav a:focus-visible {
   border: 0 none;
   outline: none;
 }
