--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -165,7 +165,7 @@ nav a:hover {
 }
 
 .card img {
-  filter: brightness(25%);
+  filter: brightness(30%);
   width: 100%;
   height: 100%;
   max-height: 300px;
@@ -192,6 +192,14 @@ nav a:hover {
   left: 0;
   width: 100%;
   height: 6px;
+}
+
+.card-border-telephone {
+  background-color: #dd7f14
+}
+
+.card-border-department {
+  background-color: #1fb638
 }
 
 .card-border-university {
