added vkeyboard and other route functions

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -424,13 +424,107 @@ blockquote:after {
   min-width: 0;
   word-wrap: break-word;
   background-color: rgba(22, 22, 22, 0.856);
-  border: 1.5px solid rgba(255, 255, 255, 0.363);
+  border: 1px solid rgba(255, 255, 255, 0.363);
   background-clip: border-box;
   padding: 1.5rem 1.5rem;
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
 
 /* UTILITY */
 .text-sub {
   color: rgb(211, 211, 211) !important;
 }
+
+.font-weight-400 {
+  font-weight: 400 !important;
+}
+
+/* ACCORDION */
+.accordion {
+  background-color: rgba(53, 53, 53, 0.925); 
+  color: rgb(255, 255, 255);
+  border-bottom: 1px solid rgba(87, 87, 87, 0.342) !important;
+  cursor: pointer;
+  padding: 20px 50px 20px 50px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 1rem;
+  transition: 0.5s;
+  position: relative;
+}
+
+.accordion:after {
+  content: '\25BC'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: rgb(255, 255, 255);
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.active:after {
+  content: "\25B2"; /* Unicode character for "up" arrow */
+}
+
+.active, .accordion:hover {
+  background-color: rgb(53, 53, 53); 
+  color: white;
+}
+
+.panel {
+  padding: 20px 50px 20px 50px;
+  color: white;
+  display: none;
+  background-color: rgba(36, 36, 36, 0.781);
+  overflow: hidden;
+  max-height: 0;
+  overflow: hidden;
+}
+
+/** INPUT SUGGESTION */
+.form-suggestion {
+  width: 100%;
+  height: 100px;
+  padding: 10px 30px;
+  font-size: 40px;
+  border: none;
+  box-sizing: border-box;
+  background-color: transparent;
+  color: white;
+  outline: none;
+  max-width: 60%;
+  border-bottom: 1px solid white;
+  text-align: center;
+}
+
+.input-suggestion {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.863)
+}
+
+/** VIRTUAL KEYBOARD */
+.hg-theme-default .hg-button {
+  height: 55px !important;
+  background: rgba(0,0,0,.5) !important;
+  border-bottom: 0px !important;
+  color: #fff;
+}
+
+.hg-theme-default .hg-button:hover {
+  background: rgba(0, 0, 0, 0.753) !important;
+  color: #fff;
+}
+
+
