--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -89,7 +89,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 .output_canvas {
   z-index: -1;
-  filter: brightness(20%);
+  filter: brightness(13%);
 }
 
 
@@ -190,7 +190,7 @@ nav a:hover {
 }
 
 .card img {
-  filter: brightness(30%);
+  filter: brightness(40%);
   width: 100%;
   height: 100%;
   max-height: 320px;
@@ -602,17 +602,49 @@ blockquote:after {
   margin: 2.2em 2em !important;
 }
 
-
 .item-post img {
   position: absolute !important;
   top: 0; 
   left: 0;
   width: 100% !important;
   min-height: 355px !important;
+  max-height: 355px !important;
   object-fit: cover !important;
   padding: 0rem !important;
-  filter: brightness(20%);
+  filter: brightness(22%);
 }
+
+.item-tutorial {
+  display: inline-block;
+  min-height: 380px;
+  min-width: 100%;
+  scroll-behavior: smooth;
+  margin: 1em 0em;
+  border-radius: 10px;
+  position: relative;
+}
+
+.item-tutorial-card {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgb(0, 0, 0);
+  border: 1px solid rgba(228, 228, 228, 0.527);
+  min-height: 380px;
+  min-width: 280px;
+  border-radius: 10px;
+}
+
+.item-tutorial img {
+  position: absolute !important;
+  top: 0; 
+  left: 0;
+  object-fit: contain !important;
+  height: 380px;
+  width: 100% !important;
+  padding: 0rem !important;
+}
+
 
 .item {
   display: inline-block;
@@ -780,7 +812,7 @@ blockquote:after {
 }
 
 .lh-0 {
-  line-height: 1rem;
+  line-height: 1.2rem;
 }
 
 .cursor-pointer {
