--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -201,6 +201,7 @@ nav a:hover {
 .card-small {
   position: relative;
   height: 100%;
+  min-height: 320px;
   transition: all 250ms;
 }
 /* 
@@ -651,7 +652,7 @@ blockquote:after {
   display: inline-block;
   background: rgba(17, 17, 17, 0.959);
   min-height: 355px;
-  min-width: 320px;
+  min-width: 300px;
   margin: 2em 5em;
   box-shadow: 0px 0px 4px 1px rgba(156, 156, 156, 0.671);
   /* border: 1.5px solid grey;   */
