--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -542,6 +542,16 @@ blockquote:after {
   overflow: hidden;
 }
 
+.popup-announcement {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.863);
+}
+
 /** INPUT SUGGESTION */
 .form-suggestion {
   width: 100%;
