GNU License added for fullpage

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -89,7 +89,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 .output_canvas {
   z-index: -1;
-  filter: brightness(15%);
+  filter: brightness(20%);
 }
 
 
@@ -97,7 +97,7 @@ h1, h2, h3, h4, h5, h6, p {
 .notif {
   position: fixed;
   padding: 1rem 2rem;
-  background-color: rgb(31, 120, 209);
+  background-color: rgba(31, 120, 209, 0.897);
   top: 25px;
   right: 25px;
   color: white;
@@ -265,7 +265,7 @@ nav a:hover {
 }
 
 .card .card-content h5 {
-  font-size: 1.5rem;
+  font-size: 1.85rem;
   text-transform: uppercase;
 }
 
@@ -643,7 +643,6 @@ blockquote:after {
   min-height: 380px;
   min-width: 100%;
   scroll-behavior: smooth;
-  /* margin: 1em 0em; */
   border-radius: 10px;
   position: relative;
 }
