--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,15 +3,9 @@
 body {
   font-family: 'Poppins', sans-serif !important;
   user-select: none;
-  background-color: #000000 !important;
+  background-image: linear-gradient(rgba(22, 22, 51, 0.719), rgba(2, 8, 29, 0.918));
+  /* background-color: #000000 !important; */
 }
-
-html {
-  /* pointer-events: none; */
-  /* cursor: none; */
-  scroll-behavior: smooth;
-}
-
 
 h1, h2, h3, h4, h5, h6, p {
   margin-bottom: 0 !important;
@@ -36,7 +30,7 @@ h1, h2, h3, h4, h5, h6, p {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 999999;
+  z-index: 999;
   opacity: 1;
   transition: all 250ms;
   display: flex;
@@ -89,7 +83,9 @@ h1, h2, h3, h4, h5, h6, p {
 
 .output_canvas {
   z-index: -1;
+  opacity: 0.3;
   filter: brightness(20%);
+  background-image: linear-gradient(rgba(52, 83, 223, 0.534), rgba(1, 8, 39, 0.596));
 }
 
 
@@ -177,33 +173,47 @@ nav a:hover {
 }
 
 /* CARD IMG */
+
+.border-hover {
+  /* border: 1px #007bff !important; */
+  box-shadow: 0px 0px 4px 2px #2bc8e4 !important;
+  border-radius: 8px !important;
+  z-index: 5;
+  /* transform: scale(1.025) !important; */
+  transition: all 150ms !important;
+  position: absolute;
+  /* color: #69ca62; */
+}
+
 .card {
   height: 100%;
-  border-radius: 0 !important;
+  background-color: #5489eb !important;
+  border-radius: 8px !important;
+  max-height: 280px;
   transition: all 450ms;
   border: 0px !important
 }
 
-.border-hover {
-  border: 1px solid #6FDBFB !important;
-  box-shadow: 0px 0px 4px 2px #6FDBFB !important;
-  z-index: 5;
-  transform: scale(1.025);
-  transition: all 500ms;
+.card .card--icon {
+  font-size: 7rem !important;
+  position: absolute;
+  top: 44%;
+  left: 48%;
+  transform: translate(-50%, -50%);
 }
 
 .card img {
   filter: brightness(40%);
   width: 100%;
   height: 100%;
-  max-height: 320px;
+  max-height: 280px;
   object-fit: cover;
 }
 
 .card-small {
   position: relative;
   height: 100%;
-  min-height: 320px;
+  min-height: 280px;
   transition: all 250ms;
 }
 /* 
@@ -257,19 +267,68 @@ nav a:hover {
 
 .card .card-small .card-content {
   position: absolute;
-  padding: 2rem 2rem;
+  padding: .6rem 1.5rem;
   bottom: 0;
   left: 0;
+  width: 100%;
+  background-color: #00000057;
   line-height: 1.15rem;
   color: white;
   font-weight: 300;
 }
 
+.card-content {
+  position: absolute;
+  padding: .6rem 1.5rem;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #00000057;
+  line-height: 1.15rem;
+  color: white;
+  font-weight: 300;
+  letter-spacing: .8px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.card-h100-content {
+  position: absolute;
+  padding: .6rem 1.5rem;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #181818b0;
+  line-height: 1.15rem;
+  color: white;
+  font-weight: 300;
+  letter-spacing: .8px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 .card .card-content h5 {
-  font-size: 1.85rem;
+  /* font-size: 1.5rem; */
   text-transform: uppercase;
 }
 
+.d-flex.flex-column.hidden {
+  display: none !important;
+}
+
+.hidden {
+  display: none !important;
+}
+
+.text-ellipse {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 /* LOADING ELEMENT */
 .loader {
@@ -611,8 +670,12 @@ blockquote:after {
   position: relative;
 }
 
-.item-post {
-  margin: 2.2em 2em !important;
+.item-post:first-of-type {
+  margin: 3em 1em 2em .5em !important;
+}
+
+.item-post:not(:first-child) {
+  margin: 3em 1em 2em 1.3em !important;
 }
 
 .item-entertainment {
@@ -626,7 +689,7 @@ blockquote:after {
   filter: brightness(70%);
 }
 
-.item-post img {
+/* .item-post img {
   position: absolute !important;
   top: 0; 
   left: 0;
@@ -636,7 +699,7 @@ blockquote:after {
   object-fit: cover !important;
   padding: 0rem !important;
   filter: brightness(22%);
-}
+} */
 
 .item-tutorial {
   display: inline-block;
@@ -671,17 +734,27 @@ blockquote:after {
   padding: 0rem !important;
 }
 
-
+/* CARD FOR MAIN MENU */
 .item {
   display: inline-block;
   background: rgba(17, 17, 17, 0.959);
-  min-height: 355px;
-  min-width: 300px;
-  margin: 2em 5em;
-  box-shadow: 0px 0px 4px 1px rgba(156, 156, 156, 0.671);
-  /* border: 1.5px solid grey;   */
-  border-radius: 3px;
+  min-height: 280px;
+  background-color: #5E8CE4 !important;
+  border-radius: 8px !important;
+  max-height: 280px;
+  transition: all 450ms;
+  border: 0px !important;
+  min-width: 320px;
   position: relative;
+}
+
+.item .card--icon {
+  font-size: 7rem !important;
+  position: absolute;
+  top: 44%;
+  left: 48%;
+  color: white;
+  transform: translate(-50%, -50%);
 }
 
 .item-popup {
@@ -782,16 +855,16 @@ blockquote:after {
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 30vh 1fr;
-  height: 100vh;
+  grid-template-rows: 100% 1fr;
+  /* height: 100vh; */
   width: 100%;
 }
 
 .grid-container-home {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 18vh 1fr;
-  height: 100%;
+  grid-template-rows: 60vh 1fr;
+  /* height: 100%; */
   width: 100%;
 }
 
@@ -884,4 +957,19 @@ blockquote:after {
 
 .bg-primary {
   background: rgb(27, 122, 199) !important;
+}
+
+@keyframes clipMe {
+  0%, 100% {
+    clip: rect(0px, 220px, 2px, 0px);
+  }
+  25% {
+    clip: rect(0px, 2px, 220px, 0px);
+  }
+  50% {
+    clip: rect(218px, 220px, 220px, 0px);
+  }
+  75% {
+    clip: rect(0px, 220px, 220px, 218px);
+  }
 }
