--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -228,12 +228,12 @@ nav a:hover {
 
 .border-hover {
   /* border: 1px #007bff !important; */
-  box-shadow: 0px 0px 4px 2px #2bc8e4 !important;
+  box-shadow: 0px 0px 2px 2px #f5f5f5 !important;
   border-radius: 8px !important;
   z-index: 5;
   /* transform: scale(1.025) !important; */
   transition: all 150ms !important;
-  position: absolute;
+  /* position: absolute; */
   /* color: #69ca62; */
 }
 
